# universe

./: docker-compose.yml
service/: .env  .gitignore  .golangci.yml  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  jest.config.ts  package-lock.json  package.json  tsconfig.json
service/cmd/universe/: config.go  main.go
service/crates/testdatabase/: Cargo.toml
service/crates/testdatabase/src/: database.rs  lib.rs  postgres.rs  seed.rs
service/docker/: start.sh
service/integration/: dummy_test.go  first.spec.ts
service/integration/features/: health.feature
service/integration/features/users/: getUser.feature
service/integration/health/: health_test.go
service/integration/health/.snapshots/: TestHealthSuite-TestHealth
service/integration/steps/: health.ts  response.ts  users.ts
service/integration/steps/world/: database.ts  world.ts
service/integration/testservice/: postgres.go  suite.go  testservice.go
service/integration/world/: hooks.ts  service.ts  testServer.ts  testService.ts
service/internal/: dummy_test.go
service/internal/database/: database.go  database_test.go  health.go  migrate.go  migrate_test.go  transaction.go
service/internal/health/: healthchecker.go  models.go  models_test.go  usecases.go
service/internal/health/endpoints/: check.go  endpoints.go  model.go
service/internal/health/service/: service.go  service_test.go
service/internal/response/: responder.go  response.go
service/internal/server/: mount.go  server.go  testing.go
service/internal/service/: database.go  health.go  server.go  service.go  testing.go
service/internal/users/: email.go  email_test.go  model.go  password.go  password_test.go  userid.go  userid_test.go  username.go  username_test.go
service/migrations/: 20201123-00001-usersTable.sql  20201202-00001-users.sql
service/src/: authorization.rs  database.rs  first.test.ts  health.rs  http.rs  index.ts  lib.rs  logger.ts  main.rs  model.rs  server.rs  service.rs  service.ts  users.rs
service/src/authentication/: endpoints.rs  model.rs  service.rs  usecases.rs
service/src/authentication/endpoints/: authenticate.rs  index.rs  list.rs  model.rs  register.rs  start.rs
service/src/authentication/model/: provider_id.rs
service/src/authentication/service/: authenticate.rs  google.rs  list.rs  register.rs
service/src/authorization/: model.rs  service.rs  usecases.rs
service/src/database/: database.ts  health.rs  migrate.rs  migrate.test.ts  migrate.ts  postgres.rs  test.rs
service/src/health/: endpoints.rs  index.ts  model.rs  model.ts  service.rs  usecases.rs  usecases.ts
service/src/home/: endpoints.rs
service/src/http/: hal.rs  problem.rs  problem.ts  response.rs  response.ts  siren.rs
service/src/model/: model.ts
service/src/server/: index.ts  server.ts  testing.ts
service/src/service/: authentication.rs  authorization.rs  database.rs  database.ts  health.rs  health.ts  home.rs  index.ts  server.rs  server.ts  testing.rs  testing.ts  users.rs  users.ts
service/src/users/: endpoints.rs  model.rs  model.ts  repository.rs  service.rs  usecases.rs  usecases.ts
service/testing/: database.ts
service/tests/: service.rs  universe.rs
service/tests/tests/: authentication.rs  health.rs  home.rs  mod.rs
service/testutils/: postgres.go
(+80 files in other folders)
