[package]
name = "universe"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "universe_lib"

[[bin]]
name = "universe"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.22"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.4"
spandoc = "0.2.1"
actix-rt = "1.1.1"
config = "0.10.1"
serde = "1.0.117"
deadpool = "0.6.0"
deadpool-postgres = "0.6.0"
tokio-postgres = "0.6.0"
[dev-dependencies]
