[package]
name = "universe"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "universe_lib"

[[bin]]
name = "universe"

[dependencies]
dotenv = "0.15.0"
tracing = "0.1.22"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.4"
spandoc = "0.2.1"
actix-rt = "1.1.1"
config = "0.10.1"
serde = "1.0.117"
deadpool = "0.5.2"
deadpool-postgres = "0.5.6"
tokio-postgres = "0.5.5"
rust-embed = "5.6.0"
actix-cors = "0.5.3"
actix-http = "2.2.0"
actix-web = "3.3.0"
bytes = "0.5.6"
async-trait = "0.1.42"
serde_json = "1.0.59"
futures = "0.3.8"

[dev-dependencies]
universe-testdatabase = { path = './crates/testdatabase'}
assert2 = "0.3.3"
string-error = "0.1.0"
insta = "1.3.0"
